<!--
  ~ Created on 18-9-26 下午6:00.
  ~ Copyright © 2018 刘振林. All rights reserved.
  -->
<resources>
    <string name="back">Back</string>
    <string name="share">Share</string>
    <string name="clickToShare">Click to Share</string>
    <string name="more">More</string>
    <string name="brightness_progress">Brightness：%.0f%%</string>
    <string name="brightness_followsSystem">Brightness：follows the system</string>
    <string name="volume_progress">Volume：%.0f%%</string>
    <string name="progress_duration">%s/%s</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
    <string name="captureVideoPhoto">Capture a Video Photo</string>
    <string name="capturedVideoPhoto">Captured Video Photo</string>
    <string name="saveScreenshotFailed">Save screenshot failed</string>
    <string name="clipVideo">Clip Video</string>
    <string name="cutoutShortVideo">Short Video</string>
    <string name="cutoutGif">GIF</string>
    <string name="clipForward">Clip Forward</string>
    <string name="clipBackwards">Clip Backwards</string>
    <string name="videoclipPlaybackProgress">Playback Progress of the Video Clip</string>
    <string name="canTakeUpToXSecondsXSecondsSelected">You can take up to %d seconds. %d seconds is selected.</string>
    <string name="gifClippingIsNotYetSupported">GIF clipping is not yet supported!</string>
    <string name="shortVideoHasBeenSavedTo">Short video \"%s\" has been saved to \"%s\"</string>
    <string name="gifHasBeenSavedTo">GIF \"%s\" has been saved to \"%s\"</string>
    <string name="seconds"> seconds </string>
    <string name="clippingFailed">Clipping failed</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="fastForward">Fast Forward</string>
    <string name="fastRewind">Fast Rewind</string>
    <string name="skipNext">Skip to Next</string>
    <string name="minimize">Minimize</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="playlist">Playlist</string>
    <string name="stretchVideoToFitFullscreen">Stretch Video to Fit Fullscreen</string>
    <string name="popUpVideoToFitFullscreen" translatable="false">Pop up Mode of Video</string>
    <string name="singleVideoLoopPlayback">Single Video Loop Playback</string>
    <string name="pureAudioPlayback">Pure Audio Playback</string>
    <string name="timedOff">Timed Off: </string>
    <string name="whenThisEpisodeEnds">when this episode ends</string>
    <string name="_30Minutes">30 minutes</string>
    <string name="anHour">an hour</string>
    <string name="videoIsLoading">Video is loading…</string>
    <string name="failedToLoadThisVideo">Failed to load this video!</string>
    <string name="loadTimeout">Load timeout</string>
    <string name="videoInThisFormatIsNotSupported">Video in this format is not supported!</string>
    <string name="unknownErrorOccurredWhenVideoIsPlaying">Unknown error occurs while the video is playing!</string>
</resources>
