<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created on 18-9-27 上午12:10.
  ~ Copyright © 2018 刘振林. All rights reserved.
  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.liuzhenlin.texturevideoview.ConstraintLayout
        android:id="@+id/content_videoview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextureView
            android:id="@+id/textureView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/scrim"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/videoScrimColor"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_seekingVideoThumb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="9dp"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:textSize="@dimen/seeking_video_thumb_text_size"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.33" />

        <LinearLayout
            android:id="@+id/frame_seekingTextProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.33">

            <TextView
                android:id="@+id/text_seeking_progress_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:textColor="@android:color/white"
                android:textSize="@dimen/seeking_progress_duration_text_size" />

            <ProgressBar
                android:id="@+id/pb_seekingProgress"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/progressbarHeight"
                android:layout_marginTop="9dp"
                android:maxHeight="@dimen/progressbarHeight"
                android:minHeight="@dimen/progressbarHeight" />
        </LinearLayout>

        <ImageView
            android:id="@+id/image_loading"
            android:layout_width="@dimen/circular_progress_size"
            android:layout_height="@dimen/circular_progress_size"
            android:contentDescription="@string/videoIsLoading"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/frame_topControls"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shadow_top"
            android:gravity="center_vertical"
            android:paddingTop="2.5dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/text_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/bt_navigate_before_38dp"
                    android:drawableLeft="@drawable/bt_navigate_before_38dp"
                    android:gravity="center_vertical"
                    android:paddingStart="5dp"
                    android:paddingLeft="5dp"
                    android:paddingEnd="0dp"
                    android:paddingRight="0dp"
                    android:textColor="@color/color_selector_white_color_accent"
                    android:textSize="@dimen/video_title_text_size" />
            </FrameLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/bt_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/share"
                app:srcCompat="@drawable/bt_share_25dp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/bt_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/more"
                app:srcCompat="@drawable/bt_more_27dp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/bt_lockUnlock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:background="@drawable/bg_middle_small_btns"
            android:contentDescription="@string/unlock"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bt_unlock_24dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/bt_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg_middle_small_btns"
            android:contentDescription="@string/captureVideoPhoto"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/bt_minimize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/bt_camera_20dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/bt_minimize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/bg_middle_small_btns"
            android:contentDescription="@string/minimize"
            android:paddingLeft="9.25dp"
            android:paddingTop="9.25dp"
            android:paddingRight="9.25dp"
            android:paddingBottom="9.25dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_camera"
            app:srcCompat="@drawable/bt_minimize_24dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/bt_videoCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/bg_middle_small_btns"
            android:contentDescription="@string/clipVideo"
            android:paddingLeft="9.25dp"
            android:paddingTop="9.25dp"
            android:paddingRight="9.25dp"
            android:paddingBottom="9.25dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_camera"
            app:srcCompat="@drawable/bt_gifcamera_21point5dp" />

        <LinearLayout
            android:id="@+id/frame_brightness_or_volume"
            android:layout_width="@dimen/brightness_or_volume_frame_width"
            android:layout_height="@dimen/brightness_or_volume_frame_height"
            android:background="@drawable/bg_brightness_or_volume_frame"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="12dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_brightness_or_volume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/widget_large_text_size" />

            <ProgressBar
                android:id="@+id/pb_brightness_or_volume"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/progressbarHeight"
                android:layout_marginTop="10dp"
                android:maxHeight="@dimen/progressbarHeight"
                android:minHeight="@dimen/progressbarHeight" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/frame_bottomControls"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shadow_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1">

            <!--<include layout="@layout/bottom_controls_fullscreen" />-->
        </FrameLayout>
    </com.liuzhenlin.texturevideoview.ConstraintLayout>

    <FrameLayout
        android:id="@+id/drawer_videoview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end|center_vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_playlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/bg_popup_dark"
            android:scrollbars="vertical"
            android:visibility="gone" />
    </FrameLayout>
</merge>
